--- a/play.html
+++ b/play.html
@@ -62,10 +62,10 @@
   </nav>
   <div id='contentDiv' style="width: 79%; float: left;">
 
-    <details open id='playerD'>
+    <details open id='playerD' style="position: fixed;">
       <summary>player</summary>
 
-      <video id='video' controls>
+      <video id='video' controls style="height: 50vh;">
 
         <source id='source1' src="" type="video/webm">
         <source id='source2' src="" type="video/mp4">
@@ -74,10 +74,11 @@
         <track id='track2' default kind="subtitles" src="" srclang="zh-Hans" label="简体中文">
 
       </video>
+      <br>
       <button id='showAllVTTB' onclick="showAllVTT()">show all vtt</button>
-      width:<input type="range" onchange="video.style.width=this.value+'%'">
+      height:<input type="range" onchange="playerPlaceholder.style.height=video.style.height=this.value+'vh'" value="50">
     </details>
-
+    <div id='playerPlaceholder' style="height: 50vh;margin-top: 10vh;"> &nbsp; </div>
 
 
     <details open>
@@ -247,6 +248,7 @@
       }
       video.load();
       video.play();
+ 
 
     }
     window.onhashchange = changeV;
@@ -342,9 +344,9 @@
     }
     //更新字幕位于视频的时间轴
     function updateTimeline() {
-      if (!video.paused) { 
+      if (!video.paused) {
         nowHr.style['margin-top'] = `${video.currentTime}em`;
-        if (video.currentTime % 10 < 1) { 
+        if (video.currentTime % 10 < 1) {
           vttDiv1.style['margin-top'] = `-${video.currentTime}em`;
           vttDiv2.style['margin-top'] = `-${video.currentTime}em`;
         }
