--- a/vtt.html
+++ b/vtt.html
@@ -10,7 +10,7 @@
         #dirI,
         #fileI,
         #keyI {
-            width: 20%;
+            width: 30%;
         }
 
         .vttDiv1 {
@@ -54,10 +54,16 @@
 
     <div id='inputD'>
 
-        dir:<textarea id='dirI'></textarea>
-        file:<textarea id='fileI'></textarea>
-        key:<textarea id='keyI'> </textarea>
-        <input type="button" value="search" onclick="search()"><br>
+        <form>
+            dir:<textarea id='dirI' name='dirIValue'></textarea>
+            file:<textarea id='fileI' name='fileIValue'></textarea>
+            key:<textarea id='keyI' name='keyIValue'></textarea>
+            <br>
+            <input type="button" value="load VTT" onclick="loadVTT()">
+            <input type="button" value="search key" onclick="search()">
+            <input type="submit" value="submit">
+            <br>
+        </form>
 
     </div>
     <div id='resultD'>
@@ -120,7 +126,7 @@
 
                                 playlist[j].vttDivs[k].append(hr);
 
-                                html += ` <a href='#${hr.id}'>${cue.text}</a>`;
+                                html += ` <a href='#${hr.id}'>${cue.text}</a> <br>`;
 
                             }
 
@@ -245,6 +251,23 @@
                 }
             }
         }, false);
+
+        let windowsUrl = new URL(window.location.href);//当前路径url
+        const load = () => {
+
+            let param;
+            //将参数设置到页面元素中
+            for (param of windowsUrl.searchParams) {
+                console.log('param '+param);
+                if (param[1] && param[1].length > 0) {
+                    let element = document.getElementsByName(param[0]);
+                    if (element && element.length>0) {
+                        element[0].value = param[1];
+                    }
+                }
+            }
+        }
+        window.onload = load;//初始化
 
     </script>
 
