--- a/vtt.html
+++ b/vtt.html
@@ -40,6 +40,7 @@
             width: 100%;
             position: absolute;
             opacity: 0.5;
+            height: 0px;
         }
 
         hr:after {
