--- a/play.html
+++ b/play.html
@@ -174,6 +174,7 @@
       videoFlag = (await fetch(videoPath)).status == 200;
       if (!videoFlag) {
         playerD.style.display = "none";
+        playerPlaceholder.style.display = "none";
         // video.style.display = "none";
         // showAllVTTB.style.display = "none";
       }
