--- a/play.html
+++ b/play.html
@@ -315,7 +315,8 @@
 
       HTML += `playlist.length:${playlist.length}\n\n`;
 
-      let mv = '', mv2 = '';
+      let mv = '', mv2 = '' ,mv3='';
+      
 
       for (let i = 0; i < playlist.length; i++) {
         let v = playlist[i];
@@ -349,6 +350,8 @@
 
         mv += `mv *${v.id}* '${_name}.${extension}' \n`;//可能文件要重命名
         mv2 += `mv *${v.id}* '${playlist.length - i}  ${_name}.${extension}' \n`;//可能文件要重命名
+
+        mv3 += `mklink   "link\\${playlist.length - i}  ${_name}.${extension}" "..\\${_name}.${extension}"`;
       }
 
       HTML += `\n\n`;
@@ -359,6 +362,8 @@
 
       HTML += `\n\n${mv}\n\n`;
       HTML += `\n\n${mv2}\n\n`;
+
+      HTML += `\n\n${mv3}\n\n`;
 
       devPre.innerHTML = HTML;
 
